[marcus] GERADA NOVA DOCUMENTAÇÃO FEITA ROTA DE ADD AS FAVORITOS MELHORADO ROTINA DE DOCUMENTAÇÃO
